--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "next": "^12.1.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.6.0"
